src/styles/Dashboard.module.css
.wrapper {
  flex: 1;
  background-color: lightgray;
  display: flex;
  flex-direction: column;
  padding: 15px 0;
  min-height: calc(100vh - 65px);
  overflow-x: hidden;
}

@media screen and (min-width: 1024px) {
  .wrapper {
    flex-direction: row;
    justify-content: space-between;
  }
}

.center {
  flex-grow: 2;
  width: 100%;
  box-sizing: border-box;
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
}

@media screen and (min-width: 1024px) {
  .center {
    width: 52%;
  }
}

.card {
  background-color: whitesmoke;
  width: 100%;
  border-radius: 6px;
  box-shadow: 0px 2px 5px rgba(128, 128, 128, 0.5);
  display: flex;
  flex-direction: column;
  padding: 0;
  box-sizing: border-box;
  margin-bottom: 20px;
}

.card ul {
  list-style: none;
  padding: 0;
  margin: 0;
  height: 100%;
}

.card ul li {
  padding: 15px;
  min-height: 80px;
}

.left {
  box-sizing: border-box;
  padding: 2% 2% 0 2%;
  display: flex;
  flex-direction: column;
}

@media screen and (min-width: 1024px) {
  .left {
    border-right: 1px solid gray;
    width: 250px;
    min-width: 250px;
  }
}

.right {
  flex-grow: 1;
  box-sizing: border-box;
  width: 100%;
}

@media screen and (min-width: 1024px) {
  .right {
    width: 28%;
  }
}

